chore: document created_at and updated_at

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -71,7 +71,9 @@ Create a new `config.json` file inside the newly created folder:
   "version": "v1.5.7",
   "source": "https://github.com/me/my-awesome-app",
   "exposable": true,
-  "supported_architectures": ["arm64", "amd64"]
+  "supported_architectures": ["arm64", "amd64"],
+  "created_at": 1724134338800,
+  "updated_at": 1724134338800
 }
 ```
 
