--- a/pages/docs/reference/config-json.mdx
+++ b/pages/docs/reference/config-json.mdx
@@ -28,3 +28,5 @@ When adding a new app to runtipi, you need to create a `config.json` file in the
 | **dynamic**                 | Use the new `compose.json` to dynamically generate a compose file.                                                                                                                                                                | true                                                                                                                                                                                                                              | no       |
 | **deprecated**              | If the app is deprecated it won't exist in the app store and it will notify users that is no longer maintained.                                                                                                                   | false                                                                                                                                                                                                                             | no       |
 | **min_tipi_version**        | An app may require a newer version of tipi than you already have for some extra feature                                                                                                                                           | v3.0.0                                                                                                                                                                                                                            | no       |
+| **created_at**              | The date the app was created. You can use `new Date().getTime()` in your browser console to get the current timestamp                                                                                                             | 1724134938430                                                                                                                                                                                                                     | no       |
+| **updated_at**              | The date the app was last updated. You can use `new Date().getTime()` in your browser console to get the current timestamp                                                                                                        | 1724134938430                                                                                                                                                                                                                     | no       |
