Fix the spell for example in running-locally.mdx.

--- a/pages/docs/contributing/running-locally.mdx
+++ b/pages/docs/contributing/running-locally.mdx
@@ -22,7 +22,7 @@ Install the project dependencies
 
 ## Edit the environment variables
 
-You need to copy `.env.exemple` to `.env` and edit there following env
+You need to copy `.env.example` to `.env` and edit there following env
 
 - ROOT_FOLDER_HOST change to put your root folder of runtipi
 - RUNTIPI_APP_DATA_PATH change to put your app data folder of runtipi
