refactor: fix some small issues

--- a/pages/docs/reference/dynamic-compose.mdx
+++ b/pages/docs/reference/dynamic-compose.mdx
@@ -4,7 +4,7 @@ import { Steps } from 'nextra-theme-docs';
 
 In Runtipi version `v3.2.0` we added a new feature called dynamic compose, this is a
 simplified and custom version of the `docker-compose.yml` file that allows for more control
-on how the app gets deployed, for example only using the reverse proxy or only using ports,
+on how apps gets deployed, for example only using the reverse proxy or only using ports,
 it also allows extra features like multiple appstores. This feature is still quite new
 and we are trying to migrate the entire appstore to the new format deprecating the
 `docker-compose.yml` file.
