--- a/pages/docs/reference/folder-structure.mdx
+++ b/pages/docs/reference/folder-structure.mdx
@@ -142,4 +142,4 @@ To make changes please check the `.env.local` file below.
 
 The `.env.local` file doesn't exist by default.
 You can create it to customize Runtipi's environment file.
-For all the available values please see [Environment variables](https://runtipi.io/docs/reference/environment-variables).
+For instructions on how to use it see [Custom environment variables](https://runtipi.io/docs/getting-started/custom-environment-variables)
