fix: fix typo in dynamic compose

--- a/pages/docs/reference/dynamic-compose.mdx
+++ b/pages/docs/reference/dynamic-compose.mdx
@@ -39,7 +39,7 @@ in the app folder. We also need to tell Runtipi to use the file so we need to ed
 and add the following configuration line at the end:
 
 ```json
-"dynamicCompose": true
+"dynamic_config": true
 ```
 
 ### Defining the services
