fix: Depeneds -> Depends

--- a/pages/docs/reference/dynamic-compose.mdx
+++ b/pages/docs/reference/dynamic-compose.mdx
@@ -266,7 +266,7 @@ but in JSON format. Here is an example:
 }
 ```
 
-### Depeneds on
+### Depends on
 
 A lot of services depend on other services (like a database) to be ready when they start. You can add the `dependsOn` key
 like this:
