docs(contributing): add a disclaimer for external contributors

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -2,9 +2,24 @@ import { Steps, Callout, FileTree } from 'nextra-theme-docs';
 
 # Adding a new app
 
-<Callout>In order to proceed you should be familiar working with the Terminal and Git.</Callout>
+<Callout emoji="🚨">
+  Unfortunately, we are no longer accepting pull requests from external collaborators due to the
+  high volume of PRs we have to deal with daily.
+
+We have reached a point in which it has become too complicated to validate, test and maintain this huge amount of apps resulting in a poor experience for our users.
+
+We are working at the moment to implement a new feature to allow you to add multiple app stores to your Runtipi instance, so you can add your own apps without the need
+to send a PR to our repository.
+
+This feature will be available very soon, so stay tuned!
+
+You can still follow this guide and add your custom apps to your own instance through the `appsRepoUrl` property in the `settings.json` file.
+
+</Callout>
 
 In this guide, we will show you how to add a new app to the Runtipi App Store. The process is pretty simple and should take you less than 20 minutes.
+
+<Callout>In order to proceed you should be familiar working with the Terminal and Git.</Callout>
 
 ## Prerequisites
 
