--- a/pages/docs/guides/customize-compose-and-traefik.mdx
+++ b/pages/docs/guides/customize-compose-and-traefik.mdx
@@ -1,4 +1,4 @@
-import { Steps, Callout, FileTree } from 'nextra-theme-docs';
+import { Steps, Callout, FileTree } from 'nextra/components';
 
 # Customize runtipi compose and traefik config
 
