--- a/pages/docs/guides/dns-challenge-cloudflare.mdx
+++ b/pages/docs/guides/dns-challenge-cloudflare.mdx
@@ -1,4 +1,4 @@
-import { Steps, Callout } from 'nextra-theme-docs';
+import { Steps, Callout } from 'nextra/components';
 import Image from 'next/image';
 
 # Setup a DNS challenge with Cloudflare
