--- a/pages/docs/guides/expose-apps-with-cloudflare-tunnels.mdx
+++ b/pages/docs/guides/expose-apps-with-cloudflare-tunnels.mdx
@@ -1,4 +1,4 @@
-import { Steps, Callout, FileTree } from 'nextra-theme-docs';
+import { Steps, Callout, FileTree } from 'nextra/components';
 import Image from 'next/image';
 
 # Expose your apps using Cloudflare tunnels
