--- a/pages/docs/guides/expose-your-apps.mdx
+++ b/pages/docs/guides/expose-your-apps.mdx
@@ -1,5 +1,5 @@
 import Image from 'next/image';
-import { Callout } from 'nextra-theme-docs';
+import { Callout } from 'nextra/components';
 
 # Expose your apps
 
@@ -13,8 +13,8 @@ Runtipi allows you to expose your apps to the internet through a public domain t
 <Callout type="warning">
   Also be aware that opening ports 80 or 443 on your router can expose your network to security
   risks. If someone knows your public IP address (which is easy to find by looking up your domain)
-  they will be able to access your runtipi login page. Make sure you have a strong password and
-  use 2FA to secure your runtipi instance.
+  they will be able to access your runtipi login page. Make sure you have a strong password and use
+  2FA to secure your runtipi instance.
 </Callout>
 
 ## Prerequisites
