--- a/pages/docs/guides/linking-a-domain-to-your-dashboard.mdx
+++ b/pages/docs/guides/linking-a-domain-to-your-dashboard.mdx
@@ -1,6 +1,6 @@
 # Linking a domain to your dashboard
 
-import { Callout } from 'nextra-theme-docs';
+import { Callout } from 'nextra/components';
 
 <Callout emoji="🚨">
   For security reasons, it is highly discouraged to expose your dashboard to the internet. We
