--- a/pages/docs/reference/folder-structure.mdx
+++ b/pages/docs/reference/folder-structure.mdx
@@ -1,4 +1,4 @@
-import { Callout, FileTree } from 'nextra-theme-docs';
+import { Callout, FileTree } from 'nextra/components';
 
 # Folder Structure
 
@@ -143,3 +143,4 @@ To make changes please check the `.env.local` file below.
 The `.env.local` file doesn't exist by default.
 You can create it to customize Runtipi's environment file.
 For instructions on how to use it see [Custom environment variables](https://runtipi.io/docs/getting-started/custom-environment-variables)
+
