--- a/pages/docs/guides/auto-backup-apps.mdx
+++ b/pages/docs/guides/auto-backup-apps.mdx
@@ -1,4 +1,4 @@
-import { Steps, Callout } from 'nextra-theme-docs';
+import { Steps, Callout } from 'nextra/components';
 
 # Auto backup your apps using cron
 
