--- a/pages/docs/guides/local-certificate.mdx
+++ b/pages/docs/guides/local-certificate.mdx
@@ -1,5 +1,5 @@
 import Image from 'next/image';
-import { Callout } from 'nextra-theme-docs';
+import { Callout } from 'nextra/components';
 
 # Local SSL certificate
 
