--- a/pages/docs/reference/breaking-updates.mdx
+++ b/pages/docs/reference/breaking-updates.mdx
@@ -1,4 +1,4 @@
-import { Steps, Callout, FileTree } from 'nextra-theme-docs';
+import { Steps, Callout, FileTree } from 'nextra/components';
 
 # Breaking updates
 
