chore: add forums link in introduction

--- a/pages/docs/introduction.mdx
+++ b/pages/docs/introduction.mdx
@@ -28,6 +28,8 @@ Runtipi is in continuous development, so issues may occur. Nevertheless, the com
 
 To get started with runtipi, follow the installation instructions, and enjoy hosting your own services effortlessly.
 
+If you need more personalized help, visit our [forums](https://forums.runtipi.io/) to get help from the community.
+
 <Cards>
   <Cards.Card icon={<LightBulbIcon />} title="Apps available" href="/docs/apps-available" />
   <Cards.Card
