chore: update architecture diagram

--- a/pages/docs/reference/architecture.mdx
+++ b/pages/docs/reference/architecture.mdx
@@ -14,11 +14,10 @@ Runtipi is built using a modern web architecture and emphasizes on end-to-end ty
 - [Traefik](https://traefik.io/) - Reverse proxy and load balancer
 - [Docker](https://www.docker.com/) - Containerization
 - [TypeScript](https://www.typescriptlang.org/) - Typed superset of JavaScript
-- [Next.js](https://nextjs.org/) - React framework for server-side rendering and static site generation
+- [NestJS](https://nestjs.com/) - Node.js framework
 - [Drizzle-ORM](https://orm.drizzle.team/) - Type safe ORM
 - [PostgreSQL](https://www.postgresql.org/) - Database
-- [Redis](https://redis.io/) - In-memory data structure store
-- [BullMQ](https://docs.bullmq.io/) - Job queueing system
+- [RabbitMQ](https://www.rabbitmq.com/) - Message broker
 
 ## Reverse Proxy
 
