Add docs for `eventsTimeout` settings.json option

--- a/pages/docs/getting-started/custom-settings.mdx
+++ b/pages/docs/getting-started/custom-settings.mdx
@@ -34,3 +34,4 @@ You can change the default settings by creating a `settings.json` file. The file
 | `allowErrorMonitoring` | Whether the app will send anonymous crash reports to the runtipi developers | `boolean`  | `true`                                        |
 | `allowAutoTheme`       | Enables thematically changing the dashboard based on the time of the year   | `boolean`  | `true`                                        |
 | `persistTraefikConfig` | Do not replace the traefik config on every restart of runtipi.              | `boolean`  | `true`                                        |
+| `eventsTimeout`        | The time in minutes to wait for an action to complete before timing out     | `integer`  | `5`                                           |
