docs: fix typos

--- a/pages/docs/contributing/adding-a-new-app.mdx
+++ b/pages/docs/contributing/adding-a-new-app.mdx
@@ -156,7 +156,7 @@ Here is also a table of what a `form_field` object requires:
 | **max**           | The maximum length for a text or password input                                                    | 100                                        | false    |
 | **required**      | Wheter the form field is required or not                                                           | true                                       | yes      |
 | **env_variable**  | The name of the variable you'll use in your `docker-compose.yml` file.                             | NEXTCLOUD_USERNAME                         | yes      |
-| **options**       | Options for multiple select                                                                        | See bellow                                 | false    |
+| **options**       | Options for multiple select                                                                        | See below                                 | false    |
 | **encoding**      | Used only in addintion to random type. Specify the random value encoding. Can be `base64` or `hex` | base64                                     | false    |
 
 <Callout>
