--- a/pages/docs/getting-started/custom-settings.mdx
+++ b/pages/docs/getting-started/custom-settings.mdx
@@ -22,13 +22,13 @@ You can change the default settings by creating a `settings.json` file. The file
 | ---------------------- | --------------------------------------------------------------------------- | ---------- | --------------------------------------------- |
 | `dnsIp`                | The IP address of the DNS server to use. Legacy, kept for compatibility     | `string`   | `9.9.9.9`                                     |
 | `domain`               | The domain name to use for the dashboard                                    | `string`   | `localhost`                                   |
-| `port`                 | The port to use for the dashboard                                           | `interger` | `80`                                          |
-| `sslPort`              | The port to use for the dashboard with SSL                                  | `interger` | `443`                                         |
+| `port`                 | The port to use for the dashboard                                           | `integer` | `80`                                          |
+| `sslPort`              | The port to use for the dashboard with SSL                                  | `integer` | `443`                                         |
 | `listenIp`             | The IP address to listen on                                                 | `string`   | `automatically detected`                      |
 | `appDataPath`          | The path to use for storing data                                            | `string`   | `runtipi/app-data`                            |
 | `localDomain`          | The domain name to use for local services                                   | `string`   | `tipi.lan`                                    |
 | `appsRepoUrl`          | The URL to the apps repository                                              | `string`   | `https://github.com/runtipi/runtipi-appstore` |
-| `postgresPort`         | The port to use for the postgres database                                   | `interger` | `5432`                                        |
+| `postgresPort`         | The port to use for the postgres database                                   | `integer` | `5432`                                        |
 | `demoMode`             | Start runtipi in demo mode                                                  | `boolean`  | `false`                                       |
 | `guestDashboard`       | Allow guest access to the dashboard                                         | `boolean`  | `false`                                       |
 | `allowErrorMonitoring` | Whether the app will send anonymous crash reports to the runtipi developers | `boolean`  | `true`                                        |
