feat: add why runtipi page

--- a/src/content/about.mdx
+++ b/src/content/about.mdx
@@ -2,7 +2,7 @@ import { AppScreenshot } from "@/app/components/AppScreenshot";
 
 # About
 
-Runtipi is an open source personal homeserver orchestrator that enables you to manage and run multiple services on a single server.
+Runtipi is an open source personal homeserver helper that enables you to manage and run multiple services on a single server.
 It is based on Docker and comes with a user-friendly web interface that simplifies service management.
 With Runtipi, you no longer need to worry about manual configuration or networking.
 Install Runtipi on your server and use the web interface to add and manage services.
