--- a/src/content/docs/guides/expose-your-apps.mdx
+++ b/src/content/docs/guides/expose-your-apps.mdx
@@ -6,17 +6,16 @@ import { Callout } from "nextra/components";
 Runtipi allows you to expose your apps to the internet through a public domain that you own. Automatic HTTPS is provided by Let's Encrypt and Runtipi will automatically renew your certificates.
 
 <Callout type="warning">
-  Exposing your apps will make them accessible from the internet. Make sure you
-  understand the security implications of doing so. Runtipi is not responsible
-  for any security breach that could happen on your server resulting from
-  exposing your apps.
+  Exposing your apps will make them accessible from the internet. Make sure you understand the
+  security implications of doing so. runtipi is not responsible for any security breach that could
+  happen on your server resulting from exposing your apps. A more secure way is to expose your apps
+  through a [Cloudflare Tunnel](/docs/guides/expose-apps-with-cloudflare-tunnels)
 </Callout>
 <Callout type="warning">
-  Also be aware that opening ports 80 or 443 on your router can expose your
-  network to security risks. If someone knows your public IP address (which is
-  easy to find by looking up your domain) they will be able to access your
-  Runtipi login page. Make sure you have a strong password and use 2FA to secure
-  your Runtipi instance.
+  Also be aware that opening ports 80 or 443 on your router can expose your network to security
+  risks. If someone knows your public IP address (which is easy to find by looking up your domain)
+  they will be able to access your runtipi login page. Make sure you have a strong password and use
+  2FA to secure your runtipi instance.
 </Callout>
 
 ## Prerequisites
