--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -1,5 +1,4 @@
 import { AppScreenshot } from "@/app/components/AppScreenshot";
-
 import { Cards, Callout } from "nextra/components";
 import { WrenchIcon, LightBulbIcon } from "@heroicons/react/24/outline";
 
@@ -33,8 +32,13 @@ If you need more personalized help, visit our [forums](https://forums.runtipi.io
 <Cards>
   <Cards.Card
     icon={<LightBulbIcon />}
+    title="Why using Runtipi?"
+    href="/docs/getting-started/why-runtipi"
+  />
+  <Cards.Card
+    icon={<LightBulbIcon />}
     title="Apps available"
-    href="/docs/apps-available"
+    href="/docs/getting-started/apps-available"
   />
   <Cards.Card
     icon={<WrenchIcon />}
