--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -1,6 +1,6 @@
 ---
 title: Runtipi | Homeserver management made easy
-description: Easy to use homeserver orchestrator to manage all your favorite self-hosted services.
+description: Easy to use homeserver helper to manage all your favorite self-hosted services.
 ---
 
 import Home from "@/app/components/pages/home";
