refactor: change about and why docs

--- a/src/content/about.mdx
+++ b/src/content/about.mdx
@@ -2,17 +2,19 @@ import { AppScreenshot } from "@/app/components/AppScreenshot";
 
 # About
 
-Runtipi is an open source personal homeserver helper that enables you to manage and run multiple services on a single server.
+Runtipi is an open source homeserver manager that enables you to run and control multiple services on a single server.
 It is based on Docker and comes with a user-friendly web interface that simplifies service management.
-With Runtipi, you no longer need to worry about manual configuration or networking.
+With Runtipi you no longer need to worry about manual configuration or networking.
 Install Runtipi on your server and use the web interface to add and manage services.
 
-At its core, Runtipi is designed to be easy to use and accessible for everyone.
-Whether you are an experienced developer or a beginner, Runtipi allows you to focus on the services you want to run without the need for extensive technical knowledge.
-The project's philosophy is to democratize the ability to self-host services by providing a simple, yet powerful tool that enables everyone to host their own services.
+At its core, Runtipi is designed to be easy to use and accessible for everyone,
+whether you are an experienced developer or a beginner, Runtipi allows you to focus
+on the services you want to run without the need for extensive technical knowledge.
+The project's philosophy is to democratize the ability to self-host services by providing
+a simple, yet powerful tool that enables everyone to host their own services.
 
-Runtipi comes with an extensive library of services in the [App Store](/docs/apps-available).
-If you cannot find what you need, you can request new services, and the community can work together to develop them.
+Runtipi comes with an extensive library of services in the [App Store](/docs/apps-available),
+if you cannot find what you need, you can request new services, and the community can work together to develop them.
 
 Runtipi is in continuous development, so issues may occur. Nevertheless, the community is continuously working to improve the project, and everyone is welcome to contribute.
 
