fix: resolve comments

--- a/src/content/docs/getting-started/why-runtipi.mdx
+++ b/src/content/docs/getting-started/why-runtipi.mdx
@@ -1,8 +1,8 @@
 # Why use Runtipi
 
-If you just discovered Runtipi you may be wondering why should you use it over 
+If you just discovered Runtipi you may be wondering why should you use it over
 docker compose and if it suits your needs. You may also be wondering why we created
-Runtipi in the first place. 
+Runtipi in the first place.
 
 Runtipi is neither an OS nor a distribution, but a set of tools to help you manage your
 self-hosted services. It is designed to be lightweight, easy to use and most importantly
@@ -21,9 +21,9 @@ self-hosting needs. It was a great way to get started with self-hosting, but it 
 not very flexible and did not scale well.
 
 Since then, the community has grown and we quickly realized that there is no such
-thing as an one-size-fits-all solution, that's why Runtipi has tried to evolve into a more modular
+thing as an one-size-fits-all solution. That's why Runtipi has tried to evolve into a more modular
 and flexible tool. While we are not completely there yet, our vision is to provide
-a set of tools that can be used by anyone, regardless of their level of expertise. 
+a set of tools that can be used by anyone, regardless of their level of expertise.
 
 ## Our goals
 
@@ -31,7 +31,7 @@ Runtipi is not trying to reinvent the wheel. We have no intention of creating a 
 runtime, orchestrator, or package manager nor are we trying to replace Docker, Kubernetes,
 or Ansible.
 
-Instead, we are trying to build a product that works on top of tools you already know and love. 
+Instead, we are trying to build a product that works on top of tools you already know and love.
 We envision a future where self-hosting is as easy as installing an app on your phone, while keeping
 the benefit of being able to customize and extend your services as much as you like.
 
@@ -43,7 +43,7 @@ to a new server or update it, we have completely forgot how we set it up in the 
 what guides we followed.
 
 We think that configuration as code is the way to go. By using a declarative configuration format,
-we can easily reproduce the service on a new environment or update it, without having to remember all the
+we can easily reproduce the service in a new environment or update it, without having to remember all the
 steps we took. Others can also replicate the service and understand how it works at a glance.
 
 By working this way, we generate a self-documenting configuration that can be versioned and shared
@@ -51,9 +51,9 @@ with others. We can also easily track changes and roll back to a previous versio
 
 ### Flexibility
 
-While we are leveraging our own tools and configuration format, the resulting services is
-always a standard Docker container configuration. This means that if you decide to move away, 
-you can still use your services an run them with a simple `docker-compose up` command.
+While we are leveraging our own tools and configuration format, the resulting services are
+always a standard Docker container configuration. This means that if you decide to move away,
+you can still use your services and run them with a simple `docker-compose up` command.
 
 ### Open source at its core
 
