--- a/src/content/about.mdx
+++ b/src/content/about.mdx
@@ -7,11 +7,8 @@ It is based on Docker and comes with a user-friendly web interface that simplifi
 With Runtipi, you no longer need to worry about manual configuration or networking.
 Install Runtipi on your server and use the web interface to add and manage services.
 
-At its core, Runtipi is designed to be easy to use and accessible for everyone,
-whether you are an experienced developer or a beginner, Runtipi allows you to focus
-on the services you want to run without the need for extensive technical knowledge.
-The project's philosophy is to democratize the ability to self-host services by providing
-a simple, yet powerful tool that enables everyone to host their services.
+At its core, Runtipi is designed to be easy to use and accessible for everyone, whether you are an experienced developer or a beginner, Runtipi allows you to focus on the services you want to run without the need for extensive technical knowledge.
+The project's philosophy is to democratize the ability to self-host services by providing a simple, yet powerful tool that enables everyone to host their services.
 
 Runtipi comes with an extensive library of services in the [App Store](/docs/apps-available).
 If you cannot find what you need, you can request new services, and the community can work together to develop them.
